--- a/servers/minecraft/templates/config/paper-global.yml.j2
+++ b/servers/minecraft/templates/config/paper-global.yml.j2
@@ -1,3 +1,4 @@
+{% set secret_file = lookup('ansible.builtin.file', '/run/secrets/velocity_forwarding_secret', errors='ignore') %}
 # This is the global configuration file for Paper.
 # As you can see, there's a lot to configure. Some options may impact gameplay, so use
 # with caution, and make sure you know what each option does before configuring.
@@ -100,7 +101,7 @@ proxies:
   bungee-cord:
     online-mode: true
   proxy-protocol: false
-  velocity: {% set secret_file = lookup('ansible.builtin.file', '/run/secrets/velocity_forwarding_secret', errors='ignore') %}
+  velocity:
     enabled: {{ secret_file is defined }}
     online-mode: false
     secret: {{ secret_file if secret_file is defined else 'N/A' }}
